--- a/style.css
+++ b/style.css
@@ -17,25 +17,25 @@
 }
 
 .loading-title {
-  font-size: 2.8rem;
-  margin-bottom: 20px;
-  font-weight: bold;
-  color: red;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  font-weight: normal;
+  color: rgb(255, 255, 255);
 }
 
 #loading-text {
-  font-size: 1.2rem;
-  color: white;
-  margin-bottom: 20px;
+  font-size: 1.0rem;
+  color: rgb(255, 255, 255);
+  margin-bottom: 0px;
 }
 
 .loading-bar {
-  width: 80%;
+  width: 50%;
   height: 12px;
   background: #222;
   border-radius: 10px;
   overflow: hidden;
-  border: 2px solid red;
+  border: 1px solid red;
 }
 
 #bar {
